[package]
name = "claude-chatbot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.24"
pulldown-cmark = "0.9"
pulldown-cmark-to-cmark = "11.0"
syntect = "5.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
webbrowser = "0.8"
tempfile = "3.0"
